[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-idaas-pam-client"
version = "0.0.1b0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["IDaaS", "IDaaS SDK"]
authors = [
    {name = "AlibabaCloud IDaaS Team", email = "cloudidaas@list.alibaba-inc.com"}
]
dependencies = [
    "cloud-idaas-core>=0.0.1a1",
    "alibabacloud-eiam-developerapi20220225>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools]
packages = ["cloud_idaas.pam_client"]

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120
